SKAPI-13 - working on test harness.  code to call the service and all the usual stuff to create a user, get an access token etc